--- a/VRChat/68/1375368.html
+++ b/VRChat/68/1375368.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uvtRhytqgKCE2uarNI0nE6Yaa7Rptjm5CX/iW7K34Yw="></script>
+    "IozAkI7YXeAowKARYZvUOXqrc1xOxniPO7OdorB47n8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ステルスシェーダー","description":"透過シェーダーです。（本物） VRChatToonShaderを元に、ステルスシェーダーに改変したものです。また、当シェーダーはログインアニメーションとしても使えます。\n※ただし、ログインアニメーションはおまけなので設定は各自でお願いします\n\n当シェーダーの使用動画\nhttps://twitter.com/reimhak/status/1129381634640211970?s=20\n※使用モデルである「ミーシェ」は付属されません\n\n同封物：UnityPackage[Stealth.shader/Reimhak's Shader_Stealth.mat/Body.controller/LoginAnimation.anim]\n・ReadMe.txt\n\n～プロパティ項目と注意点～\n・Texture\n・StealthHeight\n・ToonHeight\t※StealthHeightの値までしか表示されません。\n・Tint Color\n・Rim Color\n・ズレの間隔\n・ズレの高さ\n・線の間隔\n・元の明るさ\t※0にしても透明にはなりません、その場合alphaを変更してください。\n・線の明るさ\n・alpha\n\nログインアニメーションの設定方法\n・該当オブジェクトに同封されている[Body.controller]を付与してください。\n　自動的にAnimatorコンポーネントが付与され、オブジェクトアクティブ時に自動再生されます。\n\n　また、まばたきアニメーションが付与されている場合はそこに置き換えるか、または新規オブジェクトを作成し、\n　階層化に該当オブジェクトを移動後、作成したオブジェクトに付与してください。\n　その場合、当アニメーションやアニメーションオーバーライド（表情）のパスが変わるため、修正が必要となります。\n\n\n【禁止事項】\n・二次配布などの再配布\n・自作発言\n\n\nコード閲覧はえっちな人に限ります。不具合等ありましたらReimhakまで連絡お願いします。\n・Created by Reimhak\n\n【連絡先】\n・ Twitter\t@Reimhak\n・ Discord\tReimhak#7170\n\n更新履歴\n2019/05/17\tv1\t//booth販売","url":"https://booth.pm/ja/items/1375368","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4c101899-020e-4d99-95fc-2bc4ae850b34/i/1375368/6e7ac53a-3eeb-45dd-8c0d-f3d84c81b50d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uvtRhytqgKCE2uarNI0nE6Yaa7Rptjm5CX/iW7K34Yw="></script>
+    nonce="IozAkI7YXeAowKARYZvUOXqrc1xOxniPO7OdorB47n8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
