--- a/VRChat/42/1375142.html
+++ b/VRChat/42/1375142.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "q7VBtv2I056B/Mktg5V5LIF1Ruj9KtQHMM+zE/E7L4M="></script>
+    "/NzQmevj8aDJY+hzBZGtBHlzFl2nqMNf3ic38qw0NGQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】受信料を払わなくてもいいTV","description":"VRChatでの利用を想定したテレビ兼パソコンモニターの3Dモデルです。\n\nモニターと台座別れているのでお好みで壁掛けにもできます。\n\n※映像は映りませんので各自映像ツールなどを使うか、いい感じにテクスチャを貼り付けてご利用ください\n\n尚、素人制作よるものなので微調整などの設定でご不便おかけすると思いますがご了承ください。\n\n\n▼内容物\nUnityパッケージ\n\nFBX\n\n各種テクスチャ\n\n△350ポリゴンとなっております。\n\n\n◆利用規約◆\n\nVRChatでの利用想定\n\n・商用・個人・改変・ワールドご自由にお使いください。（改変はテクスチャ・ＦＢＸファイルどちらも）\n\n・無償での再配布可（有償での再配布不可）\n再配布する際は当ショップを宣伝してくれると喜びます\n\n・使用用途は自由ですが、他の人に迷惑のかからない範囲でご利用ください\n\n・当商品の問い合わせは一切受け付けておりません。\n\n","url":"https://booth.pm/ja/items/1375142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e94afb69-0d10-4493-8402-671fdaa09d79/i/1375142/fab4507b-4c3b-4b43-ba04-a4e39ea062db_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q7VBtv2I056B/Mktg5V5LIF1Ruj9KtQHMM+zE/E7L4M="></script>
+    nonce="/NzQmevj8aDJY+hzBZGtBHlzFl2nqMNf3ic38qw0NGQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -360,9 +360,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
