--- a/VRChat/38/1374938.html
+++ b/VRChat/38/1374938.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WhI2HaHN6Yg6wSMrQPtZO1jXL8xPdkGYtVBQfQJin94="></script>
+    "z2P0ixoUkWs1QzMUZIiPius+EPDsEVQ7mN5EfbeJcsM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Framedoll Mir","description":"Contains in Zip file\n-Unitypackage\n-readme\n\nModel and design by Xenosnake[Neptlude]\n\nConditions of use: \n- Avatar use: YES\n- Use in other programs: Contact me\n- Violence: NO\n- Sexual acts: NO\n- Corporate use: NO\n- Individual commercial use: YES \n- For-profit use (donations): YES\n- Alterations: YES\n- Redistribution (Only of modified file): YES\n- Attribution: Unnecessary\n\nDisclaimer:\nXenosnake[Neptlude] is not responsible for any harm or effects this data has on the users property.","url":"https://booth.pm/ja/items/1374938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9b1c48a4-0706-4dc5-bc68-03e0ddf8708c/i/1374938/46498751-d0d2-49e9-bc65-86fbc5de0b7e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WhI2HaHN6Yg6wSMrQPtZO1jXL8xPdkGYtVBQfQJin94="></script>
+    nonce="z2P0ixoUkWs1QzMUZIiPius+EPDsEVQ7mN5EfbeJcsM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -408,9 +408,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
