--- a/VRChat/98/1374598.html
+++ b/VRChat/98/1374598.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hU5t+3VBi8y5b+Ky6R/F706SI1DYj8ERG+wbmI/v7Z8="></script>
+    "liu+wB2JZEPOpABy8jCGKVV6bKt7bl/zgvuJROvYd1Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CardHeider","description":"Unityでボードゲームを作るときに手元を隠すのに使えるかもしれないシェーダーとプレファブです\n\n●以下の機能が含まれます。\nスタンダードのキューを変更したシェーダー\n台座っぽい形に配置したボックスとカードのプレファブ\n\n●使い方\nzipの中身をインポート\nカード別に用意するならそれのシェーダーをカードと同じものに変更\n\n●その他\n○Propertiesに以下足して\n_Mask (\"Mask\", Int) = 1\n[Enum(UnityEngine.Rendering.CompareFunction)] _Comp (\"Comp\", Int) = 8\n[Enum(UnityEngine.Rendering.StencilOp)] _Pass (\"Pass\", Int) = 2\n[Enum(UnityEngine.Rendering.StencilOp)] _Fail (\"Fail\", Int) = 0\n[Enum(UnityEngine.Rendering.StencilOp)] _ZFail (\"ZFail\", Int) = 0\n○SubShaderに以下足したら\nStencil \n{\n\tRef [_Mask]\n\tComp [_Comp]\n\tPass [_Pass]\n\tFail [_Fail]\n\tZFail [_ZFail]\n}\n○Queueの番号変えてたいてい窓枠シェーダーになるので試してみては？\n\n[2019/05/21]\n→Stencilいらなかったので消しました。\nバグってた。\nキュー番号変えただけ(3001と3002)でできたっぽいのでそれに変更","url":"https://booth.pm/ja/items/1374598","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1374598/d3d884b3-6d8b-444d-9165-e77dea8ccb0a_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hU5t+3VBi8y5b+Ky6R/F706SI1DYj8ERG+wbmI/v7Z8="></script>
+    nonce="liu+wB2JZEPOpABy8jCGKVV6bKt7bl/zgvuJROvYd1Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -354,9 +354,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
