--- a/VRChat/66/1174066.html
+++ b/VRChat/66/1174066.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6VKEszFCVyaRdir1YHrRye1unRDKv5hn7pPxfK5fxfA="></script>
+    "UlAMHd37ZbtqdHYLj1LTL8TNnHrYdga30pCWJ8qKQbo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Multi Badge","description":"「最大で16個のバッジを一つにまとめ、よりスマートにより軽量に！」ハイポリ＆ローポリのバッジ3Dモデル同封しています。\n\n複数のバッジ（画像）を一つのオブジェクト（Material・Mesh）に結合しShaderを使用して切り替えることで軽量化に繋がります。Animation及びAnimatorも使用していません。\n\n同封バッジ3Dモデルポリゴン数\nlow △ 142\nHigh△ 544\n\n※通常版とBoost版の中身は同じものです。違いはありません。","url":"https://booth.pm/ja/items/1174066","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b3160b6b-8c76-4cbb-9a5b-31c80cca3aca/i/1174066/fdbef27c-795d-40a6-8506-e07c141a251c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6VKEszFCVyaRdir1YHrRye1unRDKv5hn7pPxfK5fxfA="></script>
+    nonce="UlAMHd37ZbtqdHYLj1LTL8TNnHrYdga30pCWJ8qKQbo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
