--- a/VRChat/40/1173640.html
+++ b/VRChat/40/1173640.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HFQkwfvaPYk5CPYA/HPaOI/gGz81NFjqcu3HrIhcsRg="></script>
+    "mrRfHoGnk5hBHXT+oR38/SLUFWn79GyuxTyVk4jvShs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セーラー服５色セット（青、紫、オレンジ、白、黒）『VRoid用テクスチャ』","description":"⚠️注意⚠️\n\n過去一度も単品商品を購入をしたことが無いかたは。\n【通常ファイル】の方をダウンロードしてください。\n【パス付きzip：単品購入者特典】の方は、単品商品を購入したかた限定です。\n単品購入↓\nhttps://isekaiinuko.booth.pm/items/1168051\n単品購入者限定で付点しています【セット用特別割引パス】を入力してご利用ください。\n\n自己責任でお願いいたします。\nくれぐれも購入間違いにはお気を付けください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nクレジット表記は出来ればお願いしたいです。\n何か理由があって入れれない場合は大丈夫です。\n\n基本の色は無料でご利用いただけます。\nどうぞご利用ください。\nhttps://isekaiinuko.booth.pm/items/1168051\n\n使用方法が分からない方は\n同封の取り扱い説明書をご覧ください。\n\n追記。\nショップ、ツイッターのフォロー、ハートマークのプッシュをお願いします！\nリツイートやいいねも待ってます！\n制作者の励みになります！\n↓こちらだよ(≧∇≦)\nhttps://twitter.com/Isekaiinuko?s=09\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1173640","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"250","highPrice":"400"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1173640/1ecad4fd-8031-486a-b016-599de043a4a3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HFQkwfvaPYk5CPYA/HPaOI/gGz81NFjqcu3HrIhcsRg="></script>
+    nonce="mrRfHoGnk5hBHXT+oR38/SLUFWn79GyuxTyVk4jvShs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -476,9 +476,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
